--- a/index.html
+++ b/index.html
@@ -2,19 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-
-<meta property="og:title" content="You got a message 👀">
-<meta property="og:description" content="Click to open it">
 <meta property="og:image" content="https://media.tenor.com/8XcJ6Z5Fh5AAAAAC/sus.gif">
 <meta name="theme-color" content="#5865F2">
-
 <meta http-equiv="refresh" content="2; url=https://www.clocktab.com/msg-tab">
-
-<title>Opening...</title>
+<title>test</title>
 </head>
-<body style="background:#111;color:white;font-family:sans-serif;text-align:center;padding-top:20%;">
-<h1>Opening message...</h1>
-<p>If it doesn’t open, click below 👇</p>
-<a href="https://www.clocktab.com/msg-tab">Open manually</a>
-</body>
 </html>
