--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta property="og:url" content="https://plaenn.github.io/test1/">
 <meta property="og:image" content="https://tenor.com/view/egirl-gif-2221499951011629611">
 <meta name="theme-color" content="#5865F2">
 <meta http-equiv="refresh" content="2; url=https://www.clocktab.com/msg-tab">
