--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta property="og:url" content="https://plaenn.github.io/test1/">
-<meta property="og:image" content="https://media.tenor.com/qT1X0pG7B5kAAAAC/egirl.gif">
-<meta name="theme-color" content="#5865F2">
-<meta http-equiv="refresh" content="2; url=https://www.clocktab.com/msg-tab">
 <title>test</title>
+<meta content="title" property="og:title" />
+<meta content="desc" property="og:description" />
+<meta content="https://plaenn.github.io/test1/" property="og:url" />
+<meta content="https://media.tenor.com/qT1X0pG7B5kAAAAC/egirl.gif" property="og:image" />
+<meta content="#43B581" data-react-helmet="true" name="theme-color" />
+<meta name="twitter:card" content="summary_large_image">
 </head>
 </html>
