--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta content="title" property="og:title" />
 <meta content="desc" property="og:description" />
 <meta content="https://plaenn.github.io/test1/" property="og:url" />
-<meta content="https://media.tenor.com/qT1X0pG7B5kAAAAC/egirl.gif" property="og:image" />
+<meta content="https://plaenn.github.io/egirl (1).gif" property="og:image" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <meta name="twitter:card" content="summary_large_image">
 </head>
