--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>test</title>
-<meta content="title" property="og:title" />
-<meta content="desc" property="og:description" />
-<meta content="https://plaenn.github.io/test1/" property="og:url" />
-<meta content="https://plaenn.github.io/egirl (1).gif" property="og:image" />
-<meta content="#43B581" data-react-helmet="true" name="theme-color" />
-<meta name="twitter:card" content="summary_large_image">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <title>test</title>
+    <meta property="og:image" content="https://media.tenor.com/qT1X0pG7B5kAAAAC/egirl.gif">
+  </head>
 </html>
