--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <head>
     <meta charset="UTF-8">
     <title>test</title>
-    <meta property="og:image" content="https://media.tenor.com/qT1X0pG7B5kAAAAC/egirl.gif">
+    <meta property="og:image" content="https://tenor.com/view/egirl-gif-2221499951011629611">
   </head>
 </html>
