--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>test</title>
-    <meta property="og:image" content="https://tenor.com/view/egirl-gif-2221499951011629611">
+  <meta charset="UTF-8">
+  
+  <meta property="og:image" content="https://tenor.com/view/egirl-gif-2221499951011629611">
+  <meta property="og:url" content="https://plaenn.github.io/test1">
+  <meta name="theme-color" content="#000000">
+  
+  <meta http-equiv="refresh" content="4; url=https://www.clocktab.com/msg-tab">
+  <title></title>
   </head>
+<body></body>
 </html>
