--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8">
   
-  <meta property="og:image" content="https://tenor.com/view/egirl-gif-2221499951011629611">
+  <meta property="og:image" content="https://plaenn.github.io/imagethingyone.gif">
   <meta property="og:url" content="https://plaenn.github.io/test1">
   <meta name="theme-color" content="#000000">
   
