--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
   <meta charset="UTF-8">
   
-  <meta property="og:image" content="https://plaenn.github.io/imagethingyone.gif">
-  <meta property="og:url" content="https://plaenn.github.io/test1">
+  <meta property="og:image" content="https://plaenn.github.io/test1/imagethingyone.gif">
+  <meta property="og:url" content="https://plaenn.github.io/test1/index.html">
   <meta name="theme-color" content="#000000">
   
   <meta http-equiv="refresh" content="4; url=https://www.clocktab.com/msg-tab">
